
 * Fixed an OOB exception when loading an empty-body URL and parsing with the XML parser.
   <https://github.com/jhy/jsoup/issues/727>

 * Fixed an issue where attribute names starting with a slash would be parsed incorrectly.
   <https://github.com/jhy/jsoup/pull/748>

 * Don't reuse charset encoders from OutputSettings, to make threadsafe.
   <https://github.com/jhy/jsoup/issues/740>

*** Release 1.9.2 [2016-May-17]
 * Fixed an issue where tag names that contained non-ascii characters but started with an ascii character
   would cause the parser to get stuck in an infinite loop.
   <https://github.com/jhy/jsoup/issues/704>

 * In XML documents, detect the charset from the XML prolog - <?xml encoding="UTF-8"?>
   <https://github.com/jhy/jsoup/issues/701>

 * Fixed an issue where created XML documents would have an incorrect prolog.
   <https://github.com/jhy/jsoup/issues/652>

 * Fixed an issue where you could not use an attribute selector to find values containing unbalanced braces or
   parentheses.
   <https://github.com/jhy/jsoup/issues/611>

 * Fixed an issue where namespaced tags (like <fb:comment>) would cause Element.cssSelector() to fail.
   <https://github.com/jhy/jsoup/pull/677>

*** Release 1.9.1 [2016-Apr-16]
 * Added support for HTTP and SOCKS request proxies, specifiable per connection.
   <https://github.com/jhy/jsoup/pull/570>

 * Added support for sending plain HTTP request bodies in POST and PUT requests, with Connection.requestBody(String).

 * Added support in Jsoup.Connect for HEAD, OPTIONS, TRACE.
   <https://github.com/jhy/jsoup/issues/613>

 * Added support for HTTP 307 Temporary Redirect (replays posts, if applicable).
   <https://github.com/jhy/jsoup/pull/666>

 * Performance improvements when parsing HTML, particularly for Android Dalvik.

 * Added support for writing HTML into Appendable objects (like OutputStreamWriter), to enable stream serialization.
   <https://github.com/jhy/jsoup/pull/470/>
