@@ -855,7 +855,11 @@ public class HttpConnection implements Connection {
 
         private static String setOutputContentType(final Connection.Request req) {
             String bound = null;
-            if (needsMultipart(req)) {
+            if (req.hasHeader(CONTENT_TYPE)) {
+                // no-op; don't add content type as already set (e.g. for requestBody())
+                // todo - if content type already set, we could add charset or boundary if those aren't included
+            }
+            else if (needsMultipart(req)) {
                 bound = DataUtil.mimeBoundary();
                 req.header(CONTENT_TYPE, MULTIPART_FORM_DATA + "; boundary=" + bound);
             } else {
